--- a/my-react-app/src/styling/navbar.scss
+++ b/my-react-app/src/styling/navbar.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   padding: 8px;
-  margin-right: 12em;
+  margin-right: 15em;
   height: 8vh;
   background-color: rgb(255, 254, 254);
   position: relative;
@@ -33,13 +33,12 @@ ul {
 .secondary-nav {
   display: flex;
   justify-content: flex-end;
-  margin-right: 6.6em;
-  width: 10px;
+  margin-right: 5.7em;
 
   img {
+    width: 30px;
     max-width: 80%;
-    height: 1.8em;
-    // top: 2px;
+    height: 24px;
     position: relative;
     left: 8px;
     border-radius: 50%;
@@ -78,7 +77,7 @@ ul {
 }
 
 .donut {
-  margin: 9px 0 0 19px;
+  margin: 9px 0 0 6px;
   width: 2px;
 }
 
@@ -110,10 +109,12 @@ footer {
 @media only screen and (max-width: 768px) {
   .secondary-nav img {
     width: 24px;
-    left: 1em;
+    left: 3em;
+    height: auto;
   }
   .navitem {
     font-size: 11px;
+    height: 12vh;
     margin-right: 37em;
   }
 
@@ -125,9 +126,9 @@ footer {
     margin-right: 14px;
   }
   .secondary-nav a {
-    margin-right: 2em;
+    margin-right: 1em;
     position: relative;
-    left: 10px;
+    left: 30px;
   }
   footer {
     height: 0vh;
@@ -145,8 +146,8 @@ footer {
 
 .user-info-wrapper {
   display: flex;
-  position: relative;
-  left: 10px;
+  align-items: center;
+  margin-left: 2em;
 }
 
 .user-avatar {
@@ -161,6 +162,9 @@ ul.secondary-nav {
 }
 .secondary-nav li:active {
   transform: scale(0.9);
+}
+.nav-item-logout {
+  margin-right: 3em;
 }
 
 .usernamenav {
