--- a/my-react-app/src/styling/navbarfooter.scss
+++ b/my-react-app/src/styling/navbarfooter.scss
@@ -113,7 +113,7 @@ footer {
   .navitem {
     font-size: 15px;
     height: 15vh;
-    margin-right: 18em;
+    margin-right: 18.5em;
   }
 
   .donut {
@@ -139,6 +139,7 @@ footer {
 
 .user-info-wrapper {
   display: flex;
+  font-size: 16px;
   align-items: center;
   margin-left: 2em;
 }
@@ -158,6 +159,7 @@ ul.secondary-nav {
 }
 .nav-item-logout {
   margin-right: 3em;
+  font-size: 15.6px;
 }
 
 .usernamenav {
